# market-regime-risk-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/pages/: 1_Portfolio_Overview.py  2_Risk_Metrics.py  3_Correlation_Beta.py  4_Data_Quality.py  5_Regime_Feature_Diagnostics.py
configs/: asset_metadata.yaml  default_universe.yaml  regime_features.yaml  sample_portfolio.yaml
data/processed/: adjusted_close.parquet  regime_feature_metadata.json
notebooks/: 01_data_audit.ipynb  01_metrics_engine_demo.ipynb  02_portfolio_risk_engine.ipynb
reports/: week1_demo_notes.md  week_3_portfolio_risk_notes.md
scripts/: download_data.py
src/market_regime_risk_platform/: __init__.py
src/mrrp/: __init__.py
src/mrrp/dashboard/: __init__.py  components.py  formatting.py  loaders.py  state.py
src/mrrp/data/: cache.py  ingest.py  universe.py  validators.py
src/mrrp/risk/: beta.py  (+10 more)
tests/: test_beta.py  test_cache.py  test_concentration.py  test_config.py  test_correlation.py  test_dashboard.py  test_dashboard_loaders.py  test_dashboard_metric_contract.py  test_data_validation.py  test_dates.py  test_drawdown.py  test_feature_artifacts.py  test_feature_preprocessing.py  test_ingest.py  test_performance.py  test_portfolio_config.py  test_portfolio_config_validation.py  test_portfolio_returns.py  test_portfolio_summary.py  test_regime_features.py  test_reporting_plots.py  test_returns.py  test_risk_contribution.py  test_summary.py  test_tail.py  test_universe.py  test_volatility.py
(+17 files in other folders)
